--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Rus_Roxana_Lab8Context": "Server=(localdb)\\mssqllocaldb;Database=Rus_Roxana_Lab8Context-369126e5-841c-4fe7-bbeb-eb9ebdacb203;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProiectContext": "Server=(localdb)\\mssqllocaldb;Database=ProiectContext-369126e5-841c-4fe7-bbeb-eb9ebdacb203;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
